--- a/Compny.Web/Views/Department/Index.cshtml
+++ b/Compny.Web/Views/Department/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Index";
 }
+<a asp-action="Department" asp-action="Create" class="btn btn-primary">Create New Department </a>
 @if(Model.Count()>0)
 {
 <table class="table table-striped table-hover ">
