Part 02 Partial View

--- a/Compny.Web/Views/Department/Index.cshtml
+++ b/Compny.Web/Views/Department/Index.cshtml
@@ -23,21 +23,7 @@
                 <td>@department.Code</td>
                 <td>@department.Name</td>
                 <td>@department.CreateAt</td>
-                <td>
-                    <a asp-action="Details" asp-route-id="depatment.Id" class="btn btn-warning">
-                        <i class="fas fa-eye"></i> Details
-                    </a>
-                </td>
-                <td>
-                    <a asp-action="Update" asp-route-id="depatment.Id" class="btn btn-success">
-                        <i class="fas fa-edit"></i> Update
-                    </a>
-                </td>
-                <td>
-                    <a asp-action="Delete" asp-route-id="depatment.Id" class="btn btn-danger">
-                        <i class="fas fa-trash"></i> Delete
-                    </a>
-                </td>
+                <partial name="_ActionButtonsPartialView" model="@department.Id.ToString()" />
             </tr>
         }
     </tbody>
