--- a/Compny.Web/Views/Employee/Index.cshtml
+++ b/Compny.Web/Views/Employee/Index.cshtml
@@ -13,3 +13,45 @@
         </div>
     </form>
 </div>
+
+
+@if (Model.Count() > 0)
+{
+    <table class="table table-striped table-hover ">
+        <thead>
+            <tr>
+                <th>@Html.DisplayNameFor(D => D.Name)</th>
+                <th>@Html.DisplayNameFor(D => D.Age)</th>
+                <th>@Html.DisplayNameFor(D => D.Address)</th>
+                <th>@Html.DisplayNameFor(D => D.Salary)</th>
+                <th>@Html.DisplayNameFor(D => D.PhoneNumber)</th>
+                <th>@Html.DisplayNameFor(D => D.HiringDate)</th>
+                <th>@Html.DisplayNameFor(D => D.Email)</th>
+                <th>Details</th>
+                <th>Update</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var employee in Model)
+            {
+                <tr>
+                    <td>@employee.Name</td>
+                    <td>@employee.Address</td>
+                    <td>@employee.Age</td>
+                    <td>@Html.DisplayFor(M=>@employee.Salary)</td>
+                    <td>@Html.DisplayFor(M=>@employee.Email)</td>
+                    <td>@employee.PhoneNumber</td>
+                    <td>@employee.HiringDate</td>
+                    <partial name="_ActionButtonsPartialView" model="@employee.Id.ToString()" />
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <div class="mt-5 alert alert-warning">
+        <h3>There is no Employee</h3>
+    </div>
+}
