Part 04 ViewBag Vs ViewData Vs TempData

--- a/Compny.Web/Views/Employee/Index.cshtml
+++ b/Compny.Web/Views/Employee/Index.cshtml
@@ -14,6 +14,15 @@
     </form>
 </div>
 
+<div class="mt-5 alert alert-warning">
+    <h3>@ViewBag.Message</h3>
+</div>
+<div class="mt-5 alert alert-primary">
+    <h3>@ViewData["TextMessage"]</h3>
+</div>
+<div class="mt-5 alert alert-dark">
+    <h3>@TempData["TextTempMessage"]</h3>
+</div>
 
 @if (Model.Count() > 0)
 {
