Part 05 Add Department DropDown List

--- a/Compny.Web/Views/Department/Index.cshtml
+++ b/Compny.Web/Views/Department/Index.cshtml
@@ -3,10 +3,10 @@
     ViewData["Title"] = "Index";
 }
 <a asp-action="Department" asp-action="Create" class="btn btn-primary">Create New Department </a>
-
+@* 
 <div class="mt-5 alert alert-dark">
     <h3>@TempData["TextTempMessage"]</h3>
-</div>
+</div> *@
 @if(Model.Count()>0)
 {
 <table class="table table-striped table-hover ">
