--- a/Compny.Web/Views/Employee/Create.cshtml
+++ b/Compny.Web/Views/Employee/Create.cshtml
@@ -1,14 +1,7 @@
 ﻿@model Employee
-
-<div class="mt-5 alert alert-warning">
-    <h3>@ViewBag.Message</h3>
-</div>
-<div class="mt-5 alert alert-primary">
-    <h3>@ViewData["TextMessage"]</h3>
-</div>
-<div class="mt-5 alert alert-dark">
-    <h3>@TempData["TextTempMessage"]</h3>
-</div>
+@{
+    var departments = new SelectList(ViewBag.Departments, nameof(Department.Id), nameof(Department.Name));
+}
 <form asp-action="Create">
     <div class="form-group">
         <label class="col-form-label" asp-for="Name"></label>
@@ -49,6 +42,11 @@
         <label class="col-form-label" asp-for="HiringDate"></label>
         <input type="date" asp-for="HiringDate" class="form-control" />
         <span asp-validation-for="HiringDate" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label class="col-form-label" asp-for="Department"></label>
+        <select class="form-control" asp-items="@departments" asp-for="DepartmentId" />
+        <option value="@null">--Select Department</option>
     </div>
     <input type="submit" value="Create" class="btn btn-primary" />
     <a asp-action="Index" class="btn btn-light">Back To List</a>
