Part 06 What is Dto & Apply At Service Layer

--- a/Compny.Web/Views/_ViewImports.cshtml
+++ b/Compny.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Compny.Web
 @using Compny.Web.Models
+@using Company.Service.Interfaces.Department.DepartmentDto
+@using Company.Service.Interfaces.Employee.EmployeeDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Company.Data.Entities
