--- a/Compny.Web/Views/Employee/Create.cshtml
+++ b/Compny.Web/Views/Employee/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model EmployeeDto
 @{
     var departments = new SelectList(ViewBag.Departments, nameof(Department.Id), nameof(Department.Name));
 }
@@ -47,6 +47,11 @@
         <label class="col-form-label" asp-for="Department"></label>
         <select class="form-control" asp-items="@departments" asp-for="DepartmentId" />
         <option value="@null">--Select Department</option>
+    </div>
+    <div class="form-group">
+        <label class="col-form-label" asp-for="ImageUrl">Image</label>
+        <br />
+        <input type="file" class="form-control-file" asp-for="ImageUrl"/>
     </div>
     <input type="submit" value="Create" class="btn btn-primary" />
     <a asp-action="Index" class="btn btn-light">Back To List</a>
