Part 10 Test Upload File

--- a/Compny.Web/Views/Employee/Create.cshtml
+++ b/Compny.Web/Views/Employee/Create.cshtml
@@ -2,7 +2,7 @@
 @{
     var departments = new SelectList(ViewBag.Departments, nameof(Department.Id), nameof(Department.Name));
 }
-<form asp-action="Create">
+<form asp-action="Create" enctype="multipart/form-data">
     <div class="form-group">
         <label class="col-form-label" asp-for="Name"></label>
         <input type="text" asp-for="Name" class="form-control" />
@@ -51,7 +51,7 @@
     <div class="form-group">
         <label class="col-form-label" asp-for="ImageUrl">Image</label>
         <br />
-        <input type="file" class="form-control-file" asp-for="ImageUrl"/>
+        <input type="file" class="form-control-file" asp-for="Image"/>
     </div>
     <input type="submit" value="Create" class="btn btn-primary" />
     <a asp-action="Index" class="btn btn-light">Back To List</a>
